--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@quasar/extras": "^1.16.4",
     "axios": "^1.2.1",
+    "html2pdf.js": "^0.9.0",
     "js-file-download": "^0.4.12",
     "moment": "^2.30.1",
     "quasar": "^2.16.0",
